WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
317949
Fix include case in two places
https://bugs.webkit.org/show_bug.cgi?id=317949
Summary
Fix include case in two places
Simon Fraser (smfr)
Reported
2026-06-26 12:22:17 PDT
The build can break on case-sensitive file systems.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-26 12:22:23 PDT
<
rdar://problem/180748525
>
Simon Fraser (smfr)
Comment 2
2026-06-26 12:31:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/67962
EWS
Comment 3
2026-06-26 14:13:51 PDT
Committed
315928@main
(8df4cee792c2): <
https://commits.webkit.org/315928@main
> Reviewed commits have been landed. Closing PR #67962 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug