Fix include case in two places https://bugs.webkit.org/show_bug.cgi?id=317949 rdar://180748525

Unreviewed build fix for case-sensitive file systems; fix the case of two header includes.

* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDataDetectorItem.mm:

Canonical link: https://commits.webkit.org/315928@main