Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm
@@ -53,7 +53,7 @@
 #import "RenderBoxInlines.h"
 #import "RenderBoxModelObjectInlines.h"
 #import "RenderButton.h"
-#import "RenderMenulist.h"
+#import "RenderMenuList.h"
 #import "RenderMeter.h"
 #import "RenderObjectInlines.h"
 #import "RenderProgress.h"
